--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Image Ready</title>
-    <script type="text/javascript" src="./image-ready.js"></script>
+    <script type="text/javascript" src="./dist/image-ready.min.js"></script>
     <style type="text/css">
       body {
         font: 12px 'microsoft yahei', tahoma, arial;
