:art: Update files

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Image Ready</title>
+    <!--[if lte IE 9]>
+      <script type="text/javascript" src="./raf.js"></script>
+    <![endif]-->
     <script type="text/javascript" src="./dist/image-ready.min.js"></script>
     <style type="text/css">
       body {
