:art: Update examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
     <!--[if lte IE 9]>
       <script type="text/javascript" src="./raf.js"></script>
     <![endif]-->
-    <script type="text/javascript" src="./dist/image-ready.min.js"></script>
+    <script type="text/javascript" src="../dist/image-ready.min.js"></script>
     <style type="text/css">
       body {
         font: 12px 'microsoft yahei', tahoma, arial;
