--- a/examples/index.html
+++ b/examples/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Image Ready</title>
-    <!--[if lte IE 9]>
-      <script type="text/javascript" src="./raf.js"></script>
-    <![endif]-->
-    <script type="text/javascript" src="../dist/image-ready.min.js"></script>
     <style type="text/css">
       body {
         font: 12px 'microsoft yahei', tahoma, arial;
@@ -53,109 +49,25 @@
         border-radius: 3px;
       }
     </style>
+    <!--[if lte IE 9]>
+      <script defer type="text/javascript" src="./raf.js"></script>
+    <![endif]-->
   </head>
   <body>
     <div class="demoinfo">
       <p><strong>演示：</strong></p>
-      <div style="line-height: 40px; height: 40px;">
+      <div style="line-height: 40px; height: 40px">
         <input id="path" value="./vistas.jpg" title="图片地址" />
         <input id="submit" type="button" value="加 载" />
-        <a id="clsCache" style="color: #0259c4;" href="javascript:;">清空缓存</a>
+        <a id="clsCache" style="color: #0259c4" href="javascript:;">清空缓存</a>
         <em class="tips">（浏览器会缓存加载过后的图片）</em>
       </div>
-      <div id="status" style="display: none;">
+      <div id="status" style="display: none">
         <p><strong>通过文件头信息获取尺寸： </strong><span id="statusReady"></span></p>
         <p><strong>通过加载完毕后获取尺寸： </strong><span id="statusLoad"></span></p>
       </div>
       <div id="imageWrap"></div>
     </div>
-    <script type="text/javascript">
-      (function() {
-        var $ = function(id) {
-          return document.getElementById(id);
-        };
-
-        // 传统图片预加载
-        var imageLoad = function(url, callback, error) {
-          var img = new Image();
-
-          img.onload = function() {
-            callback(img.width, img.height);
-            img.onload = null;
-          };
-
-          img.onerror = function() {
-            img.onload = null;
-            error && error();
-          };
-
-          img.src = url;
-        };
-
-        var path = $('path');
-        var prevImgUrl = null;
-        var status = $('status');
-        var submit = $('submit');
-        var clsCache = $('clsCache');
-        var imageWrap = $('imageWrap');
-        var statusLoad = $('statusLoad');
-        var statusReady = $('statusReady');
-
-        function getResult(width, height, start) {
-          var time = new Date() - start;
-
-          return 'width: ' + width + 'px; height: ' + height + 'px; time: ' + time + 'ms;';
-        }
-
-        submit.onclick = function() {
-          var start = +new Date();
-          var imgUrl = path.value;
-
-          prevImgUrl = imgUrl;
-          status.style.display = 'block';
-          statusLoad.innerHTML = statusReady.innerHTML = 'Loading...';
-          imageWrap.innerHTML = '<img src="' + imgUrl + '" />';
-
-          // 使用占位方式快速获取大小
-          imageReady(
-            imgUrl,
-            function(width, height) {
-              if (imgUrl === prevImgUrl) {
-                statusReady.innerHTML = getResult(width, height, start);
-              }
-            },
-            function() {
-              if (imgUrl === prevImgUrl) {
-                statusReady.innerHTML = 'Img Error!';
-              }
-            }
-          );
-
-          // 使用传统方式获取大小
-          imageLoad(
-            imgUrl,
-            function(width, height) {
-              if (imgUrl === prevImgUrl) {
-                statusLoad.innerHTML = getResult(width, height, start);
-              }
-            },
-            function() {
-              if (imgUrl === prevImgUrl) {
-                statusLoad.innerHTML = 'Img Error!';
-              }
-            }
-          );
-        };
-
-        clsCache.onclick = function() {
-          var value = path.value;
-
-          path.value = (value.split('?')[1] ? value.split('?')[0] : value) + '?v=' + new Date().getTime();
-          status.style.display = 'none';
-          imageWrap.innerHTML = '';
-          prevImgUrl = null;
-        };
-      })();
-    </script>
+    <script defer type="text/javascript" src="./index.js"></script>
   </body>
 </html>
