--- a/examples/index.html
+++ b/examples/index.html
@@ -48,7 +48,7 @@
         -webkit-border-radius: 3px;
       }
       #imageWrap > img {
-        width: 100%;
+        max-width: 100%;
       }
     </style>
     <!--[if lte IE 9]>
